# CipherRescue

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/spec/: CipherRescue_Comprehensive_Specification.tex  CipherRescue_Comprehensive_Specification_v10.tex  cipherrescue.bib
src/cipherrescue/: __init__.py
src/cipherrescue/detection/: __init__.py
src/cipherrescue/orchestration/: __init__.py
src/cipherrescue/plugins/: __init__.py  _base.py  luks2_plugin.py
src/cipherrescue/safety/: __init__.py  audit_log.py  backup_manager.py  credentials.py  write_blocker.py
src/cipherrescue/scpr/: __init__.py  _extract_reasons.py  _thesis_instance.py  engine.py  file_handler.py  lp_solver.py  reduction.py  types.py
src/cipherrescue/stream1/: __init__.py  generator.py
src/cipherrescue/tui/: __init__.py
tests/: conftest.py
tests/unit/: test_audit_log.py  test_credentials.py  test_luks2_plugin.py  test_orchestration.py  test_scpr_engine.py  test_scpr_file_handler.py  test_scpr_lp.py  test_scpr_reduction.py  test_scpr_types.py  test_stream1_generator.py  test_write_blocker.py
