[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipherrescue"
version = "0.1.0.dev0"
description = "Bootable FDE recovery framework with LP-optimal SCPR diagnostic engine"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Abiola Tolulope Babatunde" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Recovery Tools",
]

dependencies = [
    # LP solver — scipy.optimize.linprog implements the revised simplex method
    # used in the SCPR diagnostic engine (Layer 5).
    "scipy>=1.11",
    "numpy>=1.26",

    # ML-based scheme detection (Layer 2) — ONNX runtime for inference only.
    # Training is done offline; the model is shipped as a frozen .onnx file.
    "onnxruntime>=1.17",

    # Audit log HMAC chaining and credential memory management (Layer 3).
    "cryptography>=42",

    # Terminal User Interface (Layer 7).
    "textual>=0.52",

    # CLI entry points and subcommand dispatch.
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-click",
]

[project.scripts]
cipherrescue = "cipherrescue.tui.app:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/cipherrescue"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/cipherrescue/issues"
Documentation = "https://github.com/YOUR_USERNAME/cipherrescue/tree/main/docs"

# ── Setuptools package discovery ───────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # assert — used in tests
    "S603",  # subprocess calls — intentional for cryptsetup/dislocker wrappers
    "S607",  # partial path — intentional for tool discovery
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

# ── Mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/cipherrescue --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/cipherrescue"]
omit = ["tests/*"]
